we'll make /picasso/images a mountable volume instead of a static directory in the container's file system. this way we can potentially grow the storage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         image: picasso/server:latest
         volumes:
           - "./configs/config.yml:/config.yml"
+          - "./server/images:/picasso/images"
         networks:
             - picasso_network
         ports:
