calling go mod init main and go mod tidy in the build docker to avoid having to manually write a list of dependencies

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,14 +3,15 @@
 ################################################################
 FROM golang:latest as build
 
+# Set working directory for all commands
 WORKDIR /picasso
+# Initialize the Golang project
+RUN go mod init main
 # Copy source code
 COPY main.go .
-COPY go.mod .
 COPY lib ./lib
-# Install go required packages
-RUN go get github.com/lib/pq
-RUN go get gopkg.in/yaml.v2
+# Update all project's required packages
+RUN go mod tidy
 
 # Compile the source code
 RUN CGO_ENABLED=0 GOOS=linux go build -o picasso
@@ -18,9 +19,11 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o picasso
 #--------------------------------------------------------------
 FROM alpine:latest as service
 
+# Set working directory for all commands
 WORKDIR /picasso
 # Copy artifacts from build
 COPY --from=build /picasso/picasso .
+# Copy all static resources
 COPY images/ /picasso/images/
 COPY lib/fonts/ /picasso/fonts/
 
